--- a/index.html
+++ b/index.html
@@ -45,6 +45,25 @@
 											<h2>Projeto Cloud of Things</h2>
 										</header>
 										<p>Tecnologias e Soluções para Habilitar o Paradigma de Nuvem das Coisas.</p>
+										<h2>Dados Gerais do Projeto</h2>
+										<p>Professor Responsável: José Neuman de Souza (UFC)<p>
+										<ul class="features">
+									<li>
+										<span class="icon solid major style1 fa-code"></span>
+										<h3>Edital</h3>
+										<p>MCTI/MC/CGI – Projeto de Pesquisa – Temático / Chamada de Propostas (2015)</p>
+									</li>
+									<li>
+										<span class="icon major style3 fa-copy"></span>
+										<h3>Tema/Linha do Projeto</h3>
+										<p>TVI – Tecnologias Viabilizadoras da Internet</p>
+									</li>
+									<li>
+										<span class="icon major style5 fa-gem"></span>
+										<h3>Vigência</h3>
+										<p>01/10/2017 a 30/09/2022</p>
+									</li>
+								</ul>
 										<ul class="actions">
 											<li><a href="#first" class="button">Saiba Mais</a></li>
 										</ul>
@@ -56,25 +75,10 @@
 						<!-- Sobre -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Magna veroeros</h2>
+									<h2>Dados Gerais do Projeto</h2>
+									<p>Professor Responsável: José Neuman de Souza (UFC)<p>
 								</header>
-								<ul class="features">
-									<li>
-										<span class="icon solid major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
-									<li>
-										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
-									<li>
-										<span class="icon major style5 fa-gem"></span>
-										<h3>Dolor nullam</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
-								</ul>
+								
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Learn More</a></li>
