--- a/index.html
+++ b/index.html
@@ -78,11 +78,18 @@
 										<p>01/10/2017 a 30/09/2022</p>
 									</li>
 								</ul>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
+								<span class="image"><img src="images/figura1.png" alt="" /></span>
+								<div class="spotlight">
+									<footer class="major">
+										<h2>Habilitando o Paradigma de Nuvem das Coisas</h2>
+										<p>As soluções propostas serão desenvolvidas como um conjunto de serviços, 
+											integrados em uma estrutura de software no nível de middleware, construído a partir de uma Arquitetura
+											de Referência (RA) Middleware, serviços e RA concebidos especificamente para ambientes de CoT. </p>
+										<p> Além disso, o projeto tem como objetivo Investigar e propor soluções para suplantar diversos
+											desafios de pesquisa identificados no contexto de Cloud of Things (CoT) visando contribuir para 
+											permitir a plena realização desse paradigma. </p>
+									</footer>		
+								</div>
 							</section>
 
 						<!-- Frentes de Pesquisa -->
