--- a/index.html
+++ b/index.html
@@ -51,7 +51,20 @@
 										</ul>
 									</div>
 									<span class="image"><img src="images/home.jpg" alt="" /></span>
-									
+									<div class="spotlight">
+										<footer>
+											<h2> Instituições Participantes:</h2>
+											<p> Universidade Federal do Ceará (UFC)</p>
+											<p> Universidade Federal do Rio de Janeiro (UFRJ)</p>
+											<p> Universidade Federal Fluminense (UFF)</p>
+											<p> Universidade de São Paulo (USP)</p>
+											<p> Universidade Federal do Rio Grande do Norte (UFRN)</p>
+											<p> Centro Federal de Educação Tecnológica do Rio de Janeiro (CEFET-RJ)</p>
+											<p> INMETRO</p>
+											<p> University of Sydney</p>
+											<p> North Dakota State University</p>
+										</footer>
+									</div>
 								</div>
 							</section>
 
@@ -80,21 +93,31 @@
 								</ul>
 								<div class="spotlight">
 									<footer class="major">
-										<h2>Habilitando o Paradigma de Nuvem das Coisas</h2>
+										<h1>Habilitando o Paradigma de Nuvem das Coisas</h1>
 										<span class="image"><img src="images/figura1.png" alt="" /></span>
 										<p>As soluções propostas serão desenvolvidas como um conjunto de serviços, 
 											integrados em uma estrutura de software no nível de middleware, construído a partir de uma Arquitetura
-											de Referência (RA) Middleware, serviços e RA concebidos especificamente para ambientes de CoT. </p>
-										<p> Além disso, o projeto tem como objetivo Investigar e propor soluções para suplantar diversos
+											de Referência (RA) Middleware, serviços e RA concebidos especificamente para ambientes de CoT. 
+											Além disso, o projeto tem como objetivo Investigar e propor soluções para suplantar diversos
 											desafios de pesquisa identificados no contexto de Cloud of Things (CoT) visando contribuir para 
 											permitir a plena realização desse paradigma. </p>
-										
+										<h2>Desenvolvimento das Seguintes Soluções Tecnológicas:</h2>
+										<p> Modelo de virtualização de dispositivos </p>
+										<p> Especificação de serviços de alocação de recursos e escalonamento de tarefas</p>
+										<p> Especificação de serviços de segurança cibernética para CoT</p>
+										<p> Especificação de técnicas de gerenciamento de dados (armazenar, 
+										classificar e extrair conhecimento de fontes de dados heterogêneas em IoT/CoT)</p>
+										<p> Uma arquitetura de referência para CoT</p>
+										<p> Especificação e implementação de um middleware para dar suporte à construção,
+										implantação e execução de aplicações de CoT com base na AR especificada</p>
+										<p> Um ambiente de programação seguindo uma abordagem dirigida a modelos 
+										para a especificação, verificação e implementação de aplicações para CoT.</p>
 									</footer>		
 								</div>
 							</section>
 
 						<!-- Frentes de Pesquisa -->
-							<section id="second" class="main special">
+							<section id="frentesdepesquisa" class="main special">
 								<header class="major">
 									<h2>Ipsum consequat</h2>
 									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
@@ -131,7 +154,7 @@
 							</section>
 
 						<!-- Portfólio -->
-							<section id="cta" class="main special">
+							<section id="portfolio" class="main special">
 								<header class="major">
 									<h2>Congue imperdiet</h2>
 									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
