--- a/index.html
+++ b/index.html
@@ -54,15 +54,17 @@
 									<div class="spotlight">
 										<footer>
 											<h2> Instituições Participantes:</h2>
-											<p> Universidade Federal do Ceará (UFC)</p>
-											<p> Universidade Federal do Rio de Janeiro (UFRJ)</p>
-											<p> Universidade Federal Fluminense (UFF)</p>
-											<p> Universidade de São Paulo (USP)</p>
-											<p> Universidade Federal do Rio Grande do Norte (UFRN)</p>
-											<p> Centro Federal de Educação Tecnológica do Rio de Janeiro (CEFET-RJ)</p>
-											<p> INMETRO</p>
-											<p> University of Sydney</p>
-											<p> North Dakota State University</p>
+											<ul>
+												<li>Universidade Federal do Ceará (UFC)</li>
+												<li>Universidade Federal do Rio de Janeiro (UFRJ)</li>
+												<li>Universidade Federal Fluminense (UFF)</li>
+												<li>Universidade de São Paulo (USP)</li>
+												<li>Universidade Federal do Rio Grande do Norte (UFRN)</li>
+												<li>Centro Federal de Educação Tecnológica do Rio de Janeiro (CEFET-RJ)</li>
+												<li>INMETRO</li>
+												<li>University of Sydney</li>
+												<li>North Dakota State University</li>
+											</ul>
 										</footer>
 									</div>
 								</div>
@@ -102,16 +104,18 @@
 											desafios de pesquisa identificados no contexto de Cloud of Things (CoT) visando contribuir para 
 											permitir a plena realização desse paradigma. </p>
 										<h2>Desenvolvimento das Seguintes Soluções Tecnológicas:</h2>
-										<p> Modelo de virtualização de dispositivos </p>
-										<p> Especificação de serviços de alocação de recursos e escalonamento de tarefas</p>
-										<p> Especificação de serviços de segurança cibernética para CoT</p>
-										<p> Especificação de técnicas de gerenciamento de dados (armazenar, 
-										classificar e extrair conhecimento de fontes de dados heterogêneas em IoT/CoT)</p>
-										<p> Uma arquitetura de referência para CoT</p>
-										<p> Especificação e implementação de um middleware para dar suporte à construção,
-										implantação e execução de aplicações de CoT com base na AR especificada</p>
-										<p> Um ambiente de programação seguindo uma abordagem dirigida a modelos 
-										para a especificação, verificação e implementação de aplicações para CoT.</p>
+										<ol>
+											<li>Modelo de virtualização de dispositivos</li>
+											<li>Especificação de serviços de alocação de recursos e escalonamento de tarefas</li>
+											<li>Especificação de serviços de segurança cibernética para CoT</li>
+											<li>Especificação de técnicas de gerenciamento de dados (armazenar, 
+												classificar e extrair conhecimento de fontes de dados heterogêneas em IoT/CoT)</li>
+											<li>Uma arquitetura de referência para CoT</li>
+											<li>Especificação e implementação de um middleware para dar suporte à construção,
+												implantação e execução de aplicações de CoT com base na AR especificada</li>
+											<li>Um ambiente de programação seguindo uma abordagem dirigida a modelos 
+												para a especificação, verificação e implementação de aplicações para CoT.</li>
+										</ol>
 									</footer>		
 								</div>
 							</section>
