--- a/index.html
+++ b/index.html
@@ -92,26 +92,34 @@
 								<div class="spotlight">
 									<footer class="major">
 										<h1>Habilitando o Paradigma de Nuvem das Coisas</h1>
-										<span class="image"><img src="images/figura1.png" alt="" /></span>
-										<p>As soluções propostas serão desenvolvidas como um conjunto de serviços, 
-											integrados em uma estrutura de software no nível de middleware, construído a partir de uma Arquitetura
-											de Referência (RA) Middleware, serviços e RA concebidos especificamente para ambientes de CoT. 
-											Além disso, o projeto tem como objetivo Investigar e propor soluções para suplantar diversos
-											desafios de pesquisa identificados no contexto de Cloud of Things (CoT) visando contribuir para 
-											permitir a plena realização desse paradigma. </p>
-										<h2>Desenvolvimento das Seguintes Soluções Tecnológicas:</h2>
-										<ol>
-											<li>Modelo de virtualização de dispositivos</li>
-											<li>Especificação de serviços de alocação de recursos e escalonamento de tarefas</li>
-											<li>Especificação de serviços de segurança cibernética para CoT</li>
-											<li>Especificação de técnicas de gerenciamento de dados (armazenar, 
-												classificar e extrair conhecimento de fontes de dados heterogêneas em IoT/CoT)</li>
-											<li>Uma arquitetura de referência para CoT</li>
-											<li>Especificação e implementação de um middleware para dar suporte à construção,
-												implantação e execução de aplicações de CoT com base na AR especificada</li>
-											<li>Um ambiente de programação seguindo uma abordagem dirigida a modelos 
-												para a especificação, verificação e implementação de aplicações para CoT.</li>
-										</ol>
+										<ul class="features">
+											<li> 
+												<span class="image"><img src="images/figura1.png" alt="" /></span>
+												<p>As soluções propostas serão desenvolvidas como um conjunto de serviços, 
+													integrados em uma estrutura de software no nível de middleware, construído a partir de uma Arquitetura
+													de Referência (RA) Middleware, serviços e RA concebidos especificamente para ambientes de CoT. 
+													Além disso, o projeto tem como objetivo Investigar e propor soluções para suplantar diversos
+													desafios de pesquisa identificados no contexto de Cloud of Things (CoT) visando contribuir para 
+													permitir a plena realização desse paradigma. </p>
+											</li>
+											<li>
+												<h2>Desenvolvimento das Seguintes Soluções Tecnológicas:</h2>
+												<ol>
+													<li>Modelo de virtualização de dispositivos</li>
+													<li>Especificação de serviços de alocação de recursos e escalonamento de tarefas</li>
+													<li>Especificação de serviços de segurança cibernética para CoT</li>
+													<li>Especificação de técnicas de gerenciamento de dados (armazenar, 
+													classificar e extrair conhecimento de fontes de dados heterogêneas em IoT/CoT)</li>
+													<li>Uma arquitetura de referência para CoT</li>
+													<li>Especificação e implementação de um middleware para dar suporte à construção,
+													implantação e execução de aplicações de CoT com base na AR especificada</li>
+													<li>Um ambiente de programação seguindo uma abordagem dirigida a modelos 
+													para a especificação, verificação e implementação de aplicações para CoT.</li>
+												</ol>
+											</li>	
+											
+										
+										</ul>
 									</footer>		
 								</div>
 							</section>
