--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 										<span class="image"><img src="images/figura1.png" alt="" /></span>
 										<div class="row">
 											<div class="col-6 col-12-medium">
-											<p>As soluções propostas serão desenvolvidas como um conjunto de serviços, 
+											<p class="content">As soluções propostas serão desenvolvidas como um conjunto de serviços, 
 												integrados em uma estrutura de software no nível de middleware, construído a partir de uma Arquitetura
 												de Referência (RA) Middleware, serviços e RA concebidos especificamente para ambientes de CoT. 
 												Além disso, o projeto tem como objetivo Investigar e propor soluções para suplantar diversos
