--- a/index.html
+++ b/index.html
@@ -93,15 +93,12 @@
 									<footer class="major">
 										<h1>Habilitando o Paradigma de Nuvem das Coisas</h1>
 										<span class="image"><img src="images/figura1.png" alt="" /></span>
+										<p class="content">
+											As soluções propostas serão desenvolvidas como um conjunto de serviços,integrados em uma estrutura de software no nível de middleware, construído a partir de uma Arquiteturade Referência (RA) Middleware, serviços e RA concebidos especificamente para ambientes de CoT. Além disso, o projeto tem como objetivo Investigar e propor soluções para suplantar diversos desafios de pesquisa identificados no contexto de Cloud of Things (CoT) visando contribuir para permitir a plena realização desse paradigma. 
+										</p>
+												
 										<div class="row">
 											<div class="col-6 col-12-medium">
-											<p class="content">As soluções propostas serão desenvolvidas como um conjunto de serviços, 
-												integrados em uma estrutura de software no nível de middleware, construído a partir de uma Arquitetura
-												de Referência (RA) Middleware, serviços e RA concebidos especificamente para ambientes de CoT. 
-												Além disso, o projeto tem como objetivo Investigar e propor soluções para suplantar diversos
-												desafios de pesquisa identificados no contexto de Cloud of Things (CoT) visando contribuir para 
-												permitir a plena realização desse paradigma. </p>
-												
 											<h2>Desenvolvimento das Seguintes Soluções Tecnológicas:</h2>
 											<ul>
 												<li>Modelo de virtualização de dispositivos</li>
