--- a/index.html
+++ b/index.html
@@ -99,19 +99,19 @@
 												
 										<div class="row">
 											<div class="col-6 col-12-medium">
-											<h2>Desenvolvimento das Seguintes Soluções Tecnológicas:</h2>
-											<ul>
-												<li>Modelo de virtualização de dispositivos</li>
-												<li>Especificação de serviços de alocação de recursos e escalonamento de tarefas</li>
-												<li>Especificação de serviços de segurança cibernética para CoT</li>
-												<li>Especificação de técnicas de gerenciamento de dados (armazenar, 
-													classificar e extrair conhecimento de fontes de dados heterogêneas em IoT/CoT)</li>
-												<li>Uma arquitetura de referência para CoT</li>
-												<li>Especificação e implementação de um middleware para dar suporte à construção,
-													implantação e execução de aplicações de CoT com base na AR especificada</li>
-												<li>Um ambiente de programação seguindo uma abordagem dirigida a modelos 
-													para a especificação, verificação e implementação de aplicações para CoT.</li>
-											</ul>
+												<h2>Desenvolvimento das Seguintes Soluções Tecnológicas:</h2>
+												<ul>
+													<li>Modelo de virtualização de dispositivos</li>
+													<li>Especificação de serviços de alocação de recursos e escalonamento de tarefas</li>
+													<li>Especificação de serviços de segurança cibernética para CoT</li>
+													<li>Especificação de técnicas de gerenciamento de dados (armazenar, 
+														classificar e extrair conhecimento de fontes de dados heterogêneas em IoT/CoT)</li>
+													<li>Uma arquitetura de referência para CoT</li>
+													<li>Especificação e implementação de um middleware para dar suporte à construção,
+														implantação e execução de aplicações de CoT com base na AR especificada</li>
+													<li>Um ambiente de programação seguindo uma abordagem dirigida a modelos 
+														para a especificação, verificação e implementação de aplicações para CoT.</li>
+												</ul>
 											</div>
 										</div>	
 									</footer>		
@@ -121,7 +121,7 @@
 						<!-- Frentes de Pesquisa -->
 							<section id="frentesdepesquisa" class="main special">
 								<header class="major">
-									<h2>Ipsum consequat</h2>
+									<h2>Frentes de Pesquisa</h2>
 									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
 									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
 								</header>
@@ -158,7 +158,7 @@
 						<!-- Portfólio -->
 							<section id="portfolio" class="main special">
 								<header class="major">
-									<h2>Congue imperdiet</h2>
+									<h2>Portfólio</h2>
 									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
 									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
 								</header>
