--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 							<section id="frentesdepesquisa" class="main special">
 								<header class="major">
 									<h2>Frentes de Pesquisa</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
+									<p>Desafios e Frentes de Pesquisa do Projeto<br />
 									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
 								</header>
 								<ul class="statistics">
