--- a/index.html
+++ b/index.html
@@ -96,38 +96,39 @@
 										<p class="content">
 											As soluções propostas serão desenvolvidas como um conjunto de serviços,integrados em uma estrutura de software no nível de middleware, construído a partir de uma Arquiteturade Referência (RA) Middleware, serviços e RA concebidos especificamente para ambientes de CoT. Além disso, o projeto tem como objetivo Investigar e propor soluções para suplantar diversos desafios de pesquisa identificados no contexto de Cloud of Things (CoT) visando contribuir para permitir a plena realização desse paradigma. 
 										</p>
-										<div class="row">
-											<div class="col-6 col-12-medium">
-												<h2>Desenvolvimento das Seguintes Soluções Tecnológicas:</h2>
-												<ul>
-													<li>Modelo de virtualização de dispositivos</li>
-													<li>Especificação de serviços de alocação de recursos e escalonamento de tarefas</li>
-													<li>Especificação de serviços de segurança cibernética para CoT</li>
-													<li>Especificação de técnicas de gerenciamento de dados (armazenar, 
-														classificar e extrair conhecimento de fontes de dados heterogêneas em IoT/CoT)</li>
-													<li>Uma arquitetura de referência para CoT</li>
-													<li>Especificação e implementação de um middleware para dar suporte à construção,
-														implantação e execução de aplicações de CoT com base na AR especificada</li>
-													<li>Um ambiente de programação seguindo uma abordagem dirigida a modelos 
-														para a especificação, verificação e implementação de aplicações para CoT.</li>
-												</ul>
+										<section>
+											<div class="row">
+												<div class="col-6 col-12-medium">
+													<h2>Desenvolvimento das Seguintes Soluções Tecnológicas:</h2>
+													<ul>
+														<li>Modelo de virtualização de dispositivos</li>
+														<li>Especificação de serviços de alocação de recursos e escalonamento de tarefas</li>
+														<li>Especificação de serviços de segurança cibernética para CoT</li>
+														<li>Especificação de técnicas de gerenciamento de dados (armazenar, 
+															classificar e extrair conhecimento de fontes de dados heterogêneas em IoT/CoT)</li>
+														<li>Uma arquitetura de referência para CoT</li>
+														<li>Especificação e implementação de um middleware para dar suporte à construção,
+															implantação e execução de aplicações de CoT com base na AR especificada</li>
+														<li>Um ambiente de programação seguindo uma abordagem dirigida a modelos 
+															para a especificação, verificação e implementação de aplicações para CoT.</li>
+													</ul>
+												</div>
+												<div class="col-6 col-12-medium">
+													<h2> Instituições Participantes:</h2>
+													<ul>
+														<li>Universidade Federal do Ceará (UFC)</li>
+														<li>Universidade Federal do Rio de Janeiro (UFRJ)</li>
+														<li>Universidade Federal Fluminense (UFF)</li>
+														<li>Universidade de São Paulo (USP)</li>
+														<li>Universidade Federal do Rio Grande do Norte (UFRN)</li>
+														<li>Centro Federal de Educação Tecnológica do Rio de Janeiro (CEFET-RJ)</li>
+														<li>INMETRO</li>
+														<li>University of Sydney</li>
+														<li>North Dakota State University</li>
+													</ul>
+												</div>
 											</div>
-											<div class="col-6 col-12-medium">
-												<h2> Instituições Participantes:</h2>
-												<ul>
-													<li>Universidade Federal do Ceará (UFC)</li>
-													<li>Universidade Federal do Rio de Janeiro (UFRJ)</li>
-													<li>Universidade Federal Fluminense (UFF)</li>
-													<li>Universidade de São Paulo (USP)</li>
-													<li>Universidade Federal do Rio Grande do Norte (UFRN)</li>
-													<li>Centro Federal de Educação Tecnológica do Rio de Janeiro (CEFET-RJ)</li>
-													<li>INMETRO</li>
-													<li>University of Sydney</li>
-													<li>North Dakota State University</li>
-												</ul>
-											</div>
-										</div>
-
+										</section>
 									</footer>		
 								</div>
 							</section>
