--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
 											<li>Modelo de virtualização de dispositivos</li>
 											<li>Especificação de serviços de alocação de recursos e escalonamento de tarefas</li>
 											<li>Especificação de serviços de segurança cibernética para CoT</li>
-											<li>Especificação de técnicas de gerenciamento de dados (armazenar, classificar e extrair conhecimento de fontes de dados heterogêneas em IoT/CoT)</li>
+											<li>Especificação de técnicas de gerenciamento de dados (armazenar, classificar e extrair conhecimento)</li>
 											<li>Uma arquitetura de referência para CoT</li>
-											<li>Especificação e implementação de um middleware para dar suporte à construção, implantação e execução de aplicações de CoT com base na AR especificada</li>
-											<li>Um ambiente de programação seguindo uma abordagem dirigida a modelos para a especificação, verificação e implementação de aplicações para CoT.</li>
+											<li>Especificação e implementação de um middleware para dar suporte à construção, implantação e execução de aplicações CoT </li>
+											<li>Um ambiente de programação seguindo uma abordagem dirigida a modelos para a especificação, verificação e implementação CoT.</li>
 										</ul>
 
 									</footer>		
@@ -116,8 +116,7 @@
 							<section id="frentesdepesquisa" class="main special">
 								<header class="major">
 									<h2>Frentes de Pesquisa</h2>
-									<p>Desafios e Frentes de Pesquisa do Projeto<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h3>Desafios e Frentes de Pesquisa do Projeto.</h3>
 								</header>
 								<ul class="statistics">
 									<li class="style1">
@@ -153,8 +152,7 @@
 							<section id="portfolio" class="main special">
 								<header class="major">
 									<h2>Portfólio</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h3>Trabalhos desenvolvidos durante o projeto</h3>
 								</header>
 								<footer class="major">
 									<ul class="actions special">
