--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 								<ul class="statistics">
 									<li class="style1">
 										<span class="icon solid fa-code-branch"></span>
-										<strong>Desfio</strong> 1
+										<strong>Desafio</strong> 1
 									</li>
 									<li class="style2">
 										<span class="icon fa-folder-open"></span>
@@ -136,11 +136,11 @@
 										<strong>Desafio</strong> 4
 									</li>
 									<li class="style5">
-										<span class="icon fa-gem"></span>
+										<span class="icon solid fa-gem"></span>
 										<strong>Desafio</strong> 5
 									</li>
-									<li class="style6">
-										<span class="icon solid major style1 fa-code"></span>
+									<li class="style1">
+										<span class="icon solid fa-code"></span>
 										<strong>Desafio</strong> 6
 									</li>
 								</ul>
