--- a/index.html
+++ b/index.html
@@ -144,7 +144,12 @@
 										<strong>Desafio</strong> 6
 									</li>
 								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
+								<h2>Desafio 1: Virtualização de Dispositivos</h2>
+								<p>Responder a duas principais questões de pesquisa:</p>
+								<ol>
+									<li>Como virtualizar dispositivos (sensores, atuadores e outros objetos físicos) e redes de dispositivos (RASSFs), e</li>
+									<li>Como separar adequadamente as responsabilidades entre os componentes de uma Nuvem de Dispositivos (considerando as três camadas: de dispositivos, de gateways e da nuvem computacional)</li>
+								</ol>
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Learn More</a></li>
