--- a/index.html
+++ b/index.html
@@ -166,8 +166,7 @@
 																
 								<h2>Desafio 5: Arquitetura de Referência para CoT</h2>								
 								<p>Para que os resultados das pesquisas derivadas dos desafios 1 a 4 sejam utilizados de forma efetiva na criação e no gerenciamento de sistemas de CoT, faz-se necessária a construção de um arcabouço de software provendo diversos tipos de funcionalidades para os vários componentes desses sistemas, e que forneça uma abstração única para uso pelos diversos tipos de stakeholders envolvidos.<br>
-								Esse arcabouço será organizado como uma plataforma de middleware que proverá um conjunto de serviços e uma interface padrão para acesso ao sistema.<br>
-								Tal plataforma de middleware será baseada em uma Arquitetura de Referência (AR).</p>
+								Esse arcabouço será organizado como uma plataforma de middleware que proverá um conjunto de serviços e uma interface padrão para acesso ao sistema. Tal plataforma de middleware será baseada em uma Arquitetura de Referência (AR).</p>
 
 																
 								<h2>Desafio 6: Construção de aplicações para CoT</h2>								
