--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
 										</p>
 	
 										<h2>Desenvolvimento das Seguintes Soluções Tecnológicas:</h2>
-										<ul class="alt">
-											<li>Modelo de virtualização de dispositivos</li>
-											<li>Especificação de serviços de alocação de recursos e escalonamento de tarefas</li>
-											<li>Especificação de serviços de segurança cibernética para CoT</li>
-											<li>Especificação de técnicas de gerenciamento de dados (armazenar, classificar e extrair conhecimento)</li>
-											<li>Uma arquitetura de referência para CoT</li>
-											<li>Especificação e implementação de um middleware para dar suporte à construção, implantação e execução de aplicações CoT </li>
-											<li>Um ambiente de programação seguindo uma abordagem dirigida a modelos para a especificação, verificação e implementação CoT.</li>
+										<ul>
+											<li align=”left”>Modelo de virtualização de dispositivos</li>
+											<li align=”left”>Especificação de serviços de alocação de recursos e escalonamento de tarefas</li>
+											<li align=”left”>Especificação de serviços de segurança cibernética para CoT</li>
+											<li align=”left”>Especificação de técnicas de gerenciamento de dados (armazenar, classificar e extrair conhecimento)</li>
+											<li align=”left”>Uma arquitetura de referência para CoT</li>
+											<li align=”left”>Especificação e implementação de um middleware para dar suporte à construção, implantação e execução de aplicações CoT </li>
+											<li align=”left”>Um ambiente de programação seguindo uma abordagem dirigida a modelos para a especificação, verificação e implementação CoT.</li>
 										</ul>
 
 									</footer>		
