--- a/index.html
+++ b/index.html
@@ -186,6 +186,12 @@
 									<h2>Portfólio</h2>
 									<h3>Trabalhos desenvolvidos durante o projeto</h3>
 								</header>
+								
+								<h1> Publicações e Softwares Desenvolvidos</h1>
+								<h3 align="left"> Frente 1: Virtualização de Dispositivos</h3>
+								<ul>
+									<li align="left"> Igor Leão dos Santos, Luci Pirmez, Flávia Coimbra Delicato, Gabriel Martins de Oliveira Costa, Claudio M. de Farias, Samee U. Khan, Albert Y. Zomaya: Zeus: A resource allocation algorithm for the cloud ofsensors. Future Generation Comp. Syst. 92: 564-581 (2019). Disponível em  <a>https://www.sciencedirect.com/science/article/abs/pii/S0167739X17312761</a></li>
+								</ul>
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button primary">Get Started</a></li>
