--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@
 								<h1> Publicações e Softwares Desenvolvidos</h1>
 								<h3 align="left"> Frente 1: Virtualização de Dispositivos</h3>
 								<ul>
-									<li align="left"> Igor Leão dos Santos, Luci Pirmez, Flávia Coimbra Delicato, Gabriel Martins de Oliveira Costa, Claudio M. de Farias, Samee U. Khan, Albert Y. Zomaya: Zeus: A resource allocation algorithm for the cloud ofsensors. Future Generation Comp. Syst. 92: 564-581 (2019). Disponível em  <a>https://www.sciencedirect.com/science/article/abs/pii/S0167739X17312761</a></li>
+									<li align="left"> Igor Leão dos Santos, Luci Pirmez, Flávia Coimbra Delicato, Gabriel Martins de Oliveira Costa, Claudio M. de Farias, Samee U. Khan, Albert Y. Zomaya: Zeus: A resource allocation algorithm for the cloud of sensors. Future Generation Comp. Syst. 92: 564-581 (2019). Disponível <a https://www.sciencedirect.com/science/article/abs/pii/S0167739X17312761> aqui</a>.</li>
+									<li align="left"> Igor L. dos Santos, Marcelo P. Alves, Flavia C. Delicato, Paulo F. Pires, Luci Pirmez, Wei Li, Albert Y. Zomaya, Samee U. Khan. A System Architecture for Cloud of Sensors. IEEE DASC 2018. Disponível em <a> </a></li>
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
