--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
 								<div class="spotlight">
 									<footer class="major">
 										<h1>Habilitando o Paradigma de Nuvem das Coisas</h1>
-										<span class="image"><img src="images/figura1.png" alt="" /></span>
+										
+										<div class="col-12"><span class="image fit"><img src="images/figura1.png" alt="" /></span></div>
 										<p class="content">
 											As soluções propostas serão desenvolvidas como um conjunto de serviços,integrados em uma estrutura de software no nível de middleware, construído a partir de uma Arquiteturade Referência (RA) Middleware, serviços e RA concebidos especificamente para ambientes de CoT. Além disso, o projeto tem como objetivo Investigar e propor soluções para suplantar diversos desafios de pesquisa identificados no contexto de Cloud of Things (CoT) visando contribuir para permitir a plena realização desse paradigma. 
 										</p>
