--- a/index.html
+++ b/index.html
@@ -92,8 +92,11 @@
 								<div class="spotlight">
 									<footer class="major">
 										<h1>Habilitando o Paradigma de Nuvem das Coisas</h1>
-										
-										<div class="col-12"><span class="image fit"><img src="images/figura1.png" alt="" /></span></div>
+										<div class="box alt">
+											<div class="row gtr-uniform">
+												<div class="col-12"><span class="image fit"><img src="images/figura1.png" alt="" /></span></div>
+											</div>
+										</div>
 										<p class="content">
 											As soluções propostas serão desenvolvidas como um conjunto de serviços,integrados em uma estrutura de software no nível de middleware, construído a partir de uma Arquiteturade Referência (RA) Middleware, serviços e RA concebidos especificamente para ambientes de CoT. Além disso, o projeto tem como objetivo Investigar e propor soluções para suplantar diversos desafios de pesquisa identificados no contexto de Cloud of Things (CoT) visando contribuir para permitir a plena realização desse paradigma. 
 										</p>
