--- a/index.html
+++ b/index.html
@@ -89,17 +89,16 @@
 										<p>01/10/2017 a 30/09/2022</p>
 									</li>
 								</ul>
+								<h1>Habilitando o Paradigma de Nuvem das Coisas</h1>
+								<p class="content">As soluções propostas serão desenvolvidas como um conjunto de serviços,integrados em uma estrutura de software no nível de middleware, construído a partir de uma Arquiteturade Referência (RA) Middleware, serviços e RA concebidos especificamente para ambientes de CoT. Além disso, o projeto tem como objetivo Investigar e propor soluções para suplantar diversos desafios de pesquisa identificados no contexto de Cloud of Things (CoT) visando contribuir para permitir a plena realização desse paradigma. 
+								</p>
+								<div class="box alt">
+									<div class="row gtr-uniform">
+										<div class="col-12"><span class="image fit"><img src="images/figura1.png" alt="" /></span></div>
+									</div>
+								</div>
 								<div class="spotlight">
-									<footer class="major">
-										<h1>Habilitando o Paradigma de Nuvem das Coisas</h1>
-										<div class="box alt">
-											<div class="row gtr-uniform">
-												<div class="col-12"><span class="image fit"><img src="images/figura1.png" alt="" /></span></div>
-											</div>
-										</div>
-										<p class="content">
-											As soluções propostas serão desenvolvidas como um conjunto de serviços,integrados em uma estrutura de software no nível de middleware, construído a partir de uma Arquiteturade Referência (RA) Middleware, serviços e RA concebidos especificamente para ambientes de CoT. Além disso, o projeto tem como objetivo Investigar e propor soluções para suplantar diversos desafios de pesquisa identificados no contexto de Cloud of Things (CoT) visando contribuir para permitir a plena realização desse paradigma. 
-										</p>
+									<footer class="major">						
 	
 										<h2>Desenvolvimento das Seguintes Soluções Tecnológicas:</h2>
 										<ul>
@@ -195,7 +194,15 @@
 								<h3 align="left"> Frente 1: Virtualização de Dispositivos</h3>
 								<ul>
 									<li align="left"> Igor Leão dos Santos, Luci Pirmez, Flávia Coimbra Delicato, Gabriel Martins de Oliveira Costa, Claudio M. de Farias, Samee U. Khan, Albert Y. Zomaya: Zeus: A resource allocation algorithm for the cloud of sensors. Future Generation Comp. Syst. 92: 564-581 (2019). Disponível <a href="https://www.sciencedirect.com/science/article/abs/pii/S0167739X17312761"> aqui</a>.</li>
-									<li align="left"> Igor L. dos Santos, Marcelo P. Alves, Flavia C. Delicato, Paulo F. Pires, Luci Pirmez, Wei Li, Albert Y. Zomaya, Samee U. Khan. A System Architecture for Cloud of Sensors. IEEE DASC 2018. Disponível em <a> </a></li>
+									<li align="left"> Igor L. dos Santos, Marcelo P. Alves, Flavia C. Delicato, Paulo F. Pires, Luci Pirmez, Wei Li, Albert Y. Zomaya, Samee U. Khan. A System Architecture for Cloud of Sensors. IEEE DASC 2018. Disponível <a href="https://ieeexplore.ieee.org/document/8511961"> aqui</a>.</li>
+									<li align="left"> Software ALFA. Disponível <a href="https://github.com/midiacom/alfa">aqui</a>.</li>
+								</ul>
+								
+								<h3 align="left"> Frente 2: Alocação de Recursos CoT</h3>
+								<ul>
+									<li align="left"> Igor L. dos Santos, Marcelo P. Alves, Flavia C. Delicato, Paulo F. Pires, Luci Pirmez, Wei Li, Albert Y. Zomaya, Samee U. Khan. A System Architecture for Cloud of Sensors. IEEE DASC 2018. Disponível <a href="https://ieeexplore.ieee.org/document/8511961"> aqui</a>.</li>
+									<li align="left"> Algoritmo de alocação de recursos. Disponível <a href="https://gitlab.com/tiagocariolano/gdriot"> aqui</a>.</li>
+									<li align="left"> Simulador YAFS estendido para executar avaliação do algoritmo. Disponível <a href="https://gitlab.com/tiagocariolano/extended_yafs">aqui</a>.</li>
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
