--- a/index.html
+++ b/index.html
@@ -240,13 +240,17 @@
 									</div>
 									<span class="image"><img src="images/professores.jpg" alt="" /></span>
 								</div>
-								
-								<h1> Publicações e Softwares Desenvolvidos</h1>
-								<h3 align="left"> Frente 1: Virtualização de Dispositivos</h3>
+
+								<h3 align="left"> Pesquisadores Principais</h3>
 								<ul>
-									<li align="left"> Igor Leão dos Santos, Luci Pirmez, Flávia Coimbra Delicato, Gabriel Martins de Oliveira Costa, Claudio M. de Farias, Samee U. Khan, Albert Y. Zomaya: Zeus: A resource allocation algorithm for the cloud of sensors. Future Generation Comp. Syst. 92: 564-581 (2019). Disponível <a href="https://www.sciencedirect.com/science/article/abs/pii/S0167739X17312761"> aqui</a>.</li>
-									<li align="left"> Igor L. dos Santos, Marcelo P. Alves, Flavia C. Delicato, Paulo F. Pires, Luci Pirmez, Wei Li, Albert Y. Zomaya, Samee U. Khan. A System Architecture for Cloud of Sensors. IEEE DASC 2018. Disponível <a href="https://ieeexplore.ieee.org/document/8511961"> aqui</a>.</li>
-									<li align="left"> Software ALFA. Disponível <a href="https://github.com/midiacom/alfa">aqui</a>.</li>
+									<li align="left"> <a href="http://lattes.cnpq.br/3614256141054800"> Jose Neuman de Souza</a> - Universidade Federal do Ceará (UFC)</li>
+									<li align="left"> <a href="http://lattes.cnpq.br/5784860269030800"> Antônio Augusto de Aragão Rocha</a> - Universidade Federal Fluminense (UFF)</li>
+									<li align="left"> <a href="http://lattes.cnpq.br/2448703093928632"> Débora Christina Muchaluat Saad</a> - Universidade Federal Fluminense (UFF)</li>
+									<li align="left"> <a href="http://lattes.cnpq.br/7494142007764616"> Elisa Yumi Nakagawa</a> - Universidade Federal de São Paulo (USP)</li>
+									<li align="left"> <a href="http://lattes.cnpq.br/5386282151810710"> Flavia Coimbra Delicato</a> - Universidade Federal Fluminense (UFF)</li>
+									<li align="left"> <a href="http://lattes.cnpq.br/8119785638200345"> Luiz Fernando Rust da Costa Carmo</a> - INMETRO</li>
+									<li align="left"> <a href="http://lattes.cnpq.br/1304174767727101"> Paulo de Figueiredo Pires</a> - Universidade Federal Fluminense (UFF)</li>
+									<li align="left"> <a href="http://lattes.cnpq.br/5521922960404236"> Thais Vasconcelos Batista</a> - Universidade Federal Fluminense (UFF)</li>
 								</ul>
 								
 								<h3 align="left"> Frente 2: Alocação de Recursos CoT</h3>
