--- a/index.html
+++ b/index.html
@@ -183,10 +183,14 @@
 
 						<!-- Portfólio -->
 							<section id="portfolio" class="main special">
-								<header class="major">
-									<h2>Portfólio</h2>
-									<h3>Trabalhos desenvolvidos durante o projeto</h3>
-								</header>
+								<div class="spotlight">
+									<div class="content">
+										<header class="major">
+											<h2>Portfólio</h2>
+										</header>
+									</div>
+									<span class="image"><img src="images/desafios.png" alt="" /></span>
+								</div>
 								
 								<h2> Publicações e Softwares Desenvolvidos</h2>
 								<h3 align="left"> Frente 1: Virtualização de Dispositivos</h3>
