--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
 									<li align="left"> <a href="http://lattes.cnpq.br/2148497049020282"> Tiago Coriolano</a> - Universidade Federal do Rio de Janeiro (UFRJ)</li>
 									<li align="left"> <a href="http://lattes.cnpq.br/8585930747442882"> Thiago Pereira da Silva</a> - Universidade Federal do Rio Grande do Norte (UFRN)</li>
 								</ul>
-																
-								<<h3 align="left"> Pesquisadores Estrangeiros</h3>
+										
+								<h3 align="left"> Pesquisadores Estrangeiros</h3>
 								<ul>
 									<li align="left"> Albert Zomaya -  University of Sydney</li>
 									<li align="left"> Samee U. Khan - North Dakota State </li>
