--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@
 										
 								<h3 align="left"> Pesquisadores Estrangeiros</h3>
 								<ul>
-									<li align="left"> Albert Zomaya -  University of Sydney</li>
-									<li align="left"> Samee U. Khan - North Dakota State </li>
+									<li align="left"> <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/albert-zomaya.html"> Albert Zomaya</a> -  University of Sydney</li>
+									<li align="left"> <a href="https://www.ece.msstate.edu/people/faculty/samee-u-khan/"> Samee U. Khan - North Dakota State</a> </li>
 								</ul>
 								
 								<h3 align="left"> Empresas Parceiras</h3>
