--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 								<h3 align="left"> Pesquisadores Estrangeiros</h3>
 								<ul>
 									<li align="left"> <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/albert-zomaya.html"> Albert Zomaya</a> -  University of Sydney</li>
-									<li align="left"> <a href="https://www.ece.msstate.edu/people/faculty/samee-u-khan/"> Samee U. Khan </a>- North Dakota Statea </li>
+									<li align="left"> <a href="https://www.ece.msstate.edu/people/faculty/samee-u-khan/"> Samee U. Khan </a>- North Dakota State </li>
 								</ul>
 								
 								<h3 align="left"> Empresas Parceiras</h3>
