--- a/index.html
+++ b/index.html
@@ -446,15 +446,15 @@
 								<p align="left"> A implantação de tecnologias de IoT em campi universitários já é uma realidade em muitos países. Na Universidade de Stanford, por exemplo, sensores foram instalados em edifícios para monitorar o consumo de energia e identificar áreas que possam ser otimizadas. Na Universidade de Tecnologia de Delft, na Holanda, um sistema de videomonitoramento inteligente foi implantado para identificar padrões de comportamento suspeitos e prevenir crimes. No Brasil, também existem diversas iniciativas para a implantação de tecnologias de IoT em campi universitários. A Universidade de São Paulo (USP) implementou conceitos de Smart Campus visando melhorar a segurança. Através do uso de tecnologias como câmeras de monitoramento, sensores de presença e análise de dados, a equipe responsável pelo projeto visa detectar comportamentos suspeitos e prevenir possíveis incidentes. Além disso, o Smart Campus também planeja melhorar a eficiência energética e reduzir custos operacionais por meio do uso de sensores de luz e temperatura. O projeto é considerado um piloto e está em fase de testes, mas pode ser expandido para outras unidades da USP no futuro. Nesse contexto, alinhado ao escopo deste projeto, os pesquisadores da Universidade Federal do Ceará (UFC) montaram um ambiente de experimentação e pesquisa com foco no desenvolvimento de um campus universitário inteligente./p>
 								<p align="left"> Um laboratório foi equipado com os dispositivos abaixo para possibilitar as pesquisas sobre Alocação de Recursos em Nuvens de Dispositivos (offloading computacional), Gerenciamento de Grandes Volumes de Dados (processamento de streams em tempo real) e Construção de aplicações para CoT (plataformas para ambientes de Cidades Inteligentes):</p>
 								<ul>
-									<li align="left"> 2 servidores com placas GPU da Nvidia 3080</li>
-									<li align="left"> 2 dispositivos móveis Android</li>
-									<li align="left"> 1 Raspberry Pi 4</li>
-									<li align="left"> 1 Raspberry Pi 3b+</li>
-									<li align="left"> 1 Nvidia Jetson Xavier</li>
-									<li align="left"> 1 Drone Dji Tello Boost</li>
-									<li align="left"> 1 NVD conectado a 4 câmeras (2 PTZs e 2 Fixas) Full HD instaladas nas vias do campus do Pici da UFC</li>
-									<li align="left"> 4 Kits com placas de prototipação, sensores de temperatura, humidade, LED (ESP32 com e sem LORA)</li>
-									<li align="left"> 1 Gateway Lorawan Radioenge</li>
+									<li align="left"> 2 SERVIDORES COM PLACAS GPU DA NVIDIA 3080</li>
+									<li align="left"> 2 DISPOSITIVOS MÓVEIS ANDROID</li>
+									<li align="left"> 1 RASPBERRY PI 4</li>
+									<li align="left"> 1 RASPBERRY PI 3b+</li>
+									<li align="left"> 1 NVIDIA JETSON XAVIER</li>
+									<li align="left"> 1 DRONE DJI TELLO BOOST</li>
+									<li align="left"> 1 NVD CONECTADO A 4 CÂMERAS (2 PTZs E 2 FIXAS) FULL HD INSTALADAS NAS VIAS DO CAMPUS DO PICI DA UFC</li>
+									<li align="left"> 4 KITS COM PLACAS DE PROTOTIPAÇÃO, SENSORES DE TEMPERATURA, HUMIDADE, LED (ESP32 COM E SEM LORA)</li>
+									<li align="left"> 1 GATEWAY LORAWAN RADIOENGE</li>
 								</ul>
 								
 								<p align="left"> Na UFF, o laboratório MidiaCom recebeu vários equipamentos adquiridos via verba do projeto, sendo possível criar um ambiente para experimentação o qual tem sido usado não somente pelos alunos da UFF mas por vários parceiros da rede temática, como alunos da UFRN e da UFC. Os itens adquiridos que foram usados para montar a infraestrutura compartilhada para experimentação estão listados a seguir:</p>
