--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
 								
 								<h3 align="left"> Alunos</h3>
 								<ul>
-									<li align="left"> <a href="http://lattes.cnpq.br/6937214674204474"> Anselmo Luiz Éden Battisti</a> - Universidade Federal do Ceará (UFC)</li>
+									<li align="left"> <a href="http://lattes.cnpq.br/6937214674204474"> Anselmo Luiz Éden Battisti</a> - Universidade Federal Fluminense (UFF) </li>
 									<li align="left"> <a href="http://lattes.cnpq.br/3173296930959280"> Denisângelo de Moura Rabelo </a> - Universidade Federal do Ceará (UFC)</li>
 									<li align="left"> <a href="http://lattes.cnpq.br/2256963384819563"> Diógenes Dias Simão</a> - Universidade Federal de São Paulo (USP)</li>
 									<li align="left"> <a href="http://lattes.cnpq.br/7734579927953717"> Erica Mourão da Silva</a> - Universidade Federal Fluminense (UFF)</li>
